# plytools

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/discover-roles/: SKILL.md
.github/workflows/: ci.yml
schemas/: contacts.example.md  positioning.example.md  profile.example.md
scripts/: apollo_lookup.py  companies_ingest.py  db.py  email_fallback.py  fetch_jd.py  fetch_jobs.py  hunter_lookup.py  migrate_add_views_table.py  migrate_to_role_folders.py  migrate_to_sqlite.py  pipeline.py  resolve_careers.py  resume_parse.py  setup.py  shortlist.py
skills/job-apply/: SKILL.md
templates/: cold_exec.md  cold_hiring_manager.md  cold_peer.md  prompt.md  warm_intro_ask.md
tests/: conftest.py  test_apollo_lookup.py  test_companies_ingest.py  test_db.py  test_email_fallback.py  test_fetch_jd.py  test_fetch_jobs.py  test_hunter_lookup.py  test_migrate_to_sqlite.py  test_pipeline.py  test_resolve_careers.py  test_resume_parse.py  test_setup.py  test_shortlist.py
tests/fixtures/: ashby_board.json  greenhouse_board.json  jd_ashby.html  jd_greenhouse.html  jd_lever.html  lever_board.json  lux_article.html  soho_valley_sample.csv
viewer/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
viewer/scripts/: dev.mjs
viewer/server/: api.ts  db.ts  plugin.ts  safePath.ts  views.ts  watcher.ts
viewer/src/: App.tsx  index.css  main.tsx
viewer/src/lib/: api.ts  (+5 more)
viewer/tests/: api.test.ts  bucketStage.test.ts  cityTags.test.ts  parsers.test.ts  safePath.test.ts  views.test.ts  watcher.test.ts
(+24 files in other folders)
