[project]
name = "plytools"
version = "0.1.0"
description = "Claude Code skill + scripts for job-application outreach"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "reportlab>=4.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",  # line length handled by formatter, not enforced here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # imports after sys.path manipulation in some test files
